vlib/v/parser/tests/for_in_mut_key_of_map.vv
fn main() {
	mut m := {'foo': 1, 'bar': 2}
	for mut k, _ in m {
		println(k)
	}
}
